Refactor all findBy(..) query methods in CommitHitory to return a new CommitHistory.